# treinamento

./: .gitignore  LICENSE  README.md  exemplo11.json  pyproject.toml  xpto.csv
incolume/py/treinamento/: files.py  raspagem.py
praticar/: abc.py  base.py  codigos.py  dicas.py  favoritos.py  help.py  menu_hamburguer.py  resenha.py  sobre.py
praticar/python/: abc.py  app.py  codigos.py  estatutos.py  favoritos.py  menu_hamburguer.py  perguntas.py
praticar/web/css/: style1.css
praticar/web/css/projeto1/: anime.css  snk.css  style.css
praticar/web/html/projeto1/: index.html  jujutsu.html  kuroko.html  naruto.html  snk.html
