[tool.poetry]
name = "treinamento"
version = "0.1.0"
description = ""
authors = ["britodfbr <britodfbr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
xlsxwriter = "^3.1.8"
httpx = "^0.25.0"
bs4 = "^0.0.1"
html5lib = "^1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
